<resources>
    <string name="app_name">Android Project</string>
    <string name="champions_league">ChampionsLeague</string>
    <string name="home">Home</string>
    <string name="results">Results</string>
    <string name="groups">Groups</string>
    <string name="group">Group</string>
    <string name="scorers">Scorers</string>
    <string name="preferences">Preferences</string>
    <string name="about">AboutUs</string>
    <string name="authors">Authors</string>
    <string name="exit">Exit</string>
    <string name="exit_message">Are you sure you want to exit?</string>
    <string name="exit_confirm">YES</string>
    <string name="exit_unconfirm">NO</string>
    <string name="theme">Theme</string>
    <string name="theme_bright">Bright</string>
    <string name="theme_dark">Dark</string>
    <string name="team">Team</string>
    <string name="points">Points</string>
    <string name="group_stage">Group Stage</string>
    <string name="quarterfinal_stage">Quarterfinal</string>
    <string name="semifinal_stage">Semifinal</string>
    <string name="final_stage">Final</string>
    <string name="choose_matchday">Choose Matchday</string>
    <string name="scorer">Scorer</string>
    <string name="goals">Goals</string>
    <string name="round_of_16_stage">Round of 16</string>
    <string name="support">You Support</string>
    <string name="change_button">Change</string>
    <string name="choose_team">Choose team you want to support</string>
    <string name="choose">Choose</string>
    <string name="go_to_preferences">Go to Preferences and there choose team you want to support</string>
    <string name="error">Error</string>
    <string name="matchday">Matchday</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>