<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group"
            android:id="@+id/group"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:background="@drawable/scorers_rounded_textview"
            android:layout_toRightOf="@+id/group"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:id="@+id/group_number" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:layout_marginLeft="50dp"
                android:textSize="10sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="@string/points"
                android:textSize="10sp"
                android:textColor="@color/black" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:background="@drawable/groups_place_circle"
                android:gravity="center"
                android:id="@+id/place_number_1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Team Name1"
                android:id="@+id/team_name_1"
                android:layout_toRightOf="@+id/place_number_1"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:textSize="10sp"/>
            <TextView
                android:id="@+id/team_points_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="4"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:background="@drawable/groups_place_circle"
                android:gravity="center"
                android:id="@+id/place_number_2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Team Name2"
                android:id="@+id/team_name_2"
                android:layout_toRightOf="@+id/place_number_2"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:textSize="10sp"/>
            <TextView
                android:id="@+id/team_points_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="3"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:background="@drawable/groups_place_circle"
                android:gravity="center"
                android:id="@+id/place_number_3" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Team Name3"
                android:id="@+id/team_name_3"
                android:layout_toRightOf="@+id/place_number_3"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:textSize="10sp"/>
            <TextView
                android:id="@+id/team_points_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="2"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:background="@drawable/groups_place_circle"
                android:gravity="center"
                android:id="@+id/place_number_4" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Team Name4"
                android:id="@+id/team_name_4"
                android:layout_toRightOf="@+id/place_number_4"
                android:textColor="@color/black"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:textSize="10sp"/>
            <TextView
                android:id="@+id/team_points_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:text="1"
                android:textSize="10sp"
                android:textColor="@color/black"
                android:layout_marginRight="10dp"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
